--- a/style1.css
+++ b/style1.css
@@ -35,6 +35,7 @@ h2 {
     margin-bottom: 10px;
 }
 h5 {
+    margin-top: 10px;
     font-weight: normal;
 }
 
@@ -60,7 +61,6 @@ a.external:after {
 p {
     font-size: 20px;
     color: #5F6368;
-    margin-bottom: 10px;
 }
 
 iframe {
@@ -172,4 +172,34 @@ button.trierlinks {
     .tab-2 {
         width: 90%;
     }
+}
+
+
+
+.accordion {
+    color: #5F6368;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-weight: bold;
+    border-radius: 20px;
+    padding: 4px 16px;
+    padding: 18px;
+  }
+.active, .accordion:hover {
+    color: black;
+}
+.panel {
+    display: none;
+    overflow: hidden;
+    width: 100%;
+}
+.panel img {
+    margin-top: 10px;
+    width: 100%;
 }
