--- a/style1.css
+++ b/style1.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -98,6 +99,7 @@ div.body1 {
     border-radius: 12px;
     backdrop-filter: blur(20px);
     box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+    overflow: hidden;
 }
   
 .tab button.tablinks {
@@ -205,3 +207,55 @@ button.trierlinks {
     width: 100%;
     height: 423px;
 }
+
+
+
+
+.search-box{
+    position: relative;
+  }
+  .input-search{
+    height: 90%;
+    width: 50px;
+    border-style: none;
+    padding: 10px;
+    font-size: 18px;
+    outline: none;
+    transition: all .3s ease-in-out;
+    background-color: transparent;
+    padding-right: 40px;
+    color:#fff;
+  }
+  .input-search::placeholder{
+    color:rgba(255,255,255,.5);
+    font-size: 18px;
+    letter-spacing: 1.5px;
+    font-weight: 100;
+  }
+  .btn-search{
+    width: 50px;
+    height: 100%;
+    border-style: none;
+    font-size: 20px;
+    font-weight: bold;
+    outline: none;
+    cursor: pointer;
+    border-radius: 50%;
+    position: absolute;
+    right: 0px;
+    color:#ffffff ;
+    background-color:transparent;
+    pointer-events: painted;  
+  }
+  .btn-search:focus ~ .input-search{
+    width: 300px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom:1px solid rgba(255,255,255,.5);
+  }
+  .input-search:focus{
+    width: 300px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom:1px solid rgba(255,255,255,.5);
+  }
