--- a/style1.css
+++ b/style1.css
@@ -215,7 +215,8 @@ button.trierlinks {
     position: relative;
   }
   .input-search{
-    height: 90%;
+    height: 85%;
+    margin-top: 4px;
     width: 50px;
     border-style: none;
     padding: 10px;
@@ -224,12 +225,12 @@ button.trierlinks {
     transition: all .3s ease-in-out;
     background-color: transparent;
     padding-right: 40px;
-    color:#fff;
+    border-radius: 12px;
+    color: black;
   }
   .input-search::placeholder{
-    color:rgba(255,255,255,.5);
+    color:rgba(57, 57, 57, 0.648);
     font-size: 18px;
-    letter-spacing: 1.5px;
     font-weight: 100;
   }
   .btn-search{
@@ -249,13 +250,9 @@ button.trierlinks {
   }
   .btn-search:focus ~ .input-search{
     width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
+    background-color: white;
   }
   .input-search:focus{
     width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
+    background-color: white;
   }
