--- a/the-base/style1.css
+++ b/the-base/style1.css
@@ -35,6 +35,11 @@ h2 {
     font-size: 27px;
     margin-bottom: 10px;
 }
+h4 {
+    font-weight: normal;
+    display: flex;
+    align-items: center;
+}
 h5 {
     margin-top: 10px;
     font-weight: normal;
@@ -422,3 +427,37 @@ button.trierlinks {
       width: 100%;
     }
   }
+
+
+  
+  div.spacer {
+    background-color: #72767a;
+    width: 1px;
+    height: 20px;
+    margin: 0 10px;
+  }
+
+  .tagdiv {
+    margin-bottom: 10px;
+    align-items: center;
+    display: flex;
+  }
+  .tagele {
+    padding: 5px;
+    margin: 1px;
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  }
+  .tagele:hover {
+    box-shadow: #2ec4b549 0px 10px 36px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  }
+  div.tagele h4::before {
+    content: "";
+    display: inline-flex;
+    height: 20px;
+    width: 20px;
+    margin-right: 8px;
+    background-image: url(file:///D:/Documents/GitHub/HUB/the-base/images/icons/tag.svg);
+    background-size: cover;
+    align-items: center;
+}
