--- a/the-base/style1.css
+++ b/the-base/style1.css
@@ -39,6 +39,8 @@ h4 {
     font-weight: normal;
     display: flex;
     align-items: center;
+    font-size: 12px;
+    color: #5F6368;
 }
 h5 {
     margin-top: 10px;
@@ -60,7 +62,7 @@ a.external:after {
     height: 20px;
     width: 20px;
     margin-left: 8px;
-    background-image: url(the-base/images/icons/link-out-svgrepo-com.svg);
+    background-image: url(../the-base/images/icons/link-out-svgrepo-com.svg);
     background-size: cover;
 }
 
@@ -438,9 +440,10 @@ button.trierlinks {
   }
 
   .tagdiv {
-    margin-bottom: 10px;
     align-items: center;
     display: flex;
+    position: absolute;
+    right: 10px;
   }
   .tagele {
     padding: 5px;
@@ -454,10 +457,15 @@ button.trierlinks {
   div.tagele h4::before {
     content: "";
     display: inline-flex;
-    height: 20px;
-    width: 20px;
-    margin-right: 8px;
-    background-image: url(file:///D:/Documents/GitHub/HUB/the-base/images/icons/tag.svg);
+    height: 13px;
+    width: 13px;
+    margin-right: 5px;
+    background-image: url(../the-base/images/icons/tag.svg);
     background-size: cover;
     align-items: center;
+}
+
+
+.articlefood {
+  display: flex;
 }
