--- a/the-base/style1.css
+++ b/the-base/style1.css
@@ -42,13 +42,19 @@ div.body1 {
         margin-left: auto;
         margin-right: auto;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         background-color: #ffffff99;
         border-radius: 12px;
         backdrop-filter: blur(20px);
         box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
         overflow: hidden;
     }
+    .tab-2-btn {
+      width: 90%;
+      display: flex;
+      justify-content: space-around;
+    }
+
     .tab button.tablinks {
         background: none;
         font-size: 25px;
@@ -69,6 +75,20 @@ div.body1 {
         color: #2EC4B6; 
         background-color: rgba(255, 255, 255, 0.3);
     }
+
+
+
+    /* OPTION NAVBAR */
+        .bar-option-but {
+          position: fixed;
+          left: 15%;
+        }
+        .bar-option-but {
+          background-color: #ffffff99;
+          border-radius: 12px;
+          backdrop-filter: blur(20px);
+          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;  
+        }
 /* END_NAVBAR */
 
 
@@ -76,6 +96,7 @@ div.body1 {
 /* SEARCH BAR */
     .search-box{
         position: relative;
+        margin-right: 4px;
       }
     .input-search{
       height: 85%;
@@ -186,7 +207,7 @@ div.body1 {
 /* MORE OPTION DANS LES ARTICLES */
     .accordion {
         color: #5F6368;
-        display: contents;
+        display: flex;
         margin-left: auto;
         margin-right: auto;
 
@@ -279,18 +300,18 @@ div.body1 {
     
     /* The dots/bullets/indicators */
     .dot {
-      cursor: pointer;
-      height: 15px;
-      width: 15px;
       margin: 0 2px;
-      background-color: #bbb;
-      border-radius: 50%;
       display: inline-block;
-      transition: background-color 0.6s ease;
+      border: 1px solid #202124;
+      border-radius: 50%;
+      cursor: pointer;
+      height: 12px;
+      width: 12px;
+      transition: background-color 0.2s ease;
     }
     
     span.active, .dot:hover {
-      background-color: #717171;
+      background-color: #202124;
     }
     
     /* Fading animation */
@@ -382,21 +403,31 @@ div.body1 {
 
 
 
-/* GRID OPTION */
+/* BTN OPTION */
     .btn {
+      background: none;
+      font-size: 25px;
+      float: left;
       border: none;
       outline: none;
-      padding: 12px 16px;
-      background-color: #f1f1f1;
       cursor: pointer;
+      padding: 14px 16px;
+      transition: 0.3s;
+      border-radius: 99px;
+      font-weight: bold;
+      color: black;
     }
 
     .btn:hover {
-      background-color: #ddd;
+      color: #2EC4B6;
     }
 
     .btn.activebt {
-      background-color: #666;
-      color: white;
+      color: #2EC4B6; 
+      background-color: rgba(255, 255, 255, 0.3);
     }
-/* GRID OPTION */
+    .btn.btnhover:hover {
+      color: #2EC4B6; 
+      background-color: rgba(255, 255, 255, 0.3);
+    }
+/* BTN OPTION */
