--- a/the-base/style1.css
+++ b/the-base/style1.css
@@ -75,20 +75,6 @@ div.body1 {
         color: #2EC4B6; 
         background-color: rgba(255, 255, 255, 0.3);
     }
-
-
-
-    /* OPTION NAVBAR */
-        .bar-option-but {
-          position: fixed;
-          left: 15%;
-        }
-        .bar-option-but {
-          background-color: #ffffff99;
-          border-radius: 12px;
-          backdrop-filter: blur(20px);
-          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;  
-        }
 /* END_NAVBAR */
 
 
@@ -403,31 +389,103 @@ div.body1 {
 
 
 
-/* BTN OPTION */
-    .btn {
-      background: none;
-      font-size: 25px;
+/* DROPDOWN */
+    .bar-option-but {
+      width: 100%;
+      display: flex;
+      margin-bottom: 2.25rem;
+      animation: fadeEffect 0.45s;
+    }
+    .dropdown-content button{
       float: left;
+      width: 100%;
+      border: none;
+      font-size: 16px;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      background: none;
+    }
+    .dropdown {
+      border-radius: 12px;
+      float: left;
+      overflow: hidden;
+      background-color: rgba(255, 255, 255, 0.95);
+    }
+    .dropdown .dropbtn {
+      font-size: 16px;
+      font-weight: bold;
+      background: none;
       border: none;
       outline: none;
-      cursor: pointer;
       padding: 14px 16px;
-      transition: 0.3s;
-      border-radius: 99px;
-      font-weight: bold;
+      margin: 0; /* Important for vertical align on mobile phones */
+      display: flex;
+      align-items: center;
+    }
+    .dropdown:hover {
+      border-radius: 12px 12px 0 0;
+    }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: rgba(255, 255, 255, 0.95);
+      min-width: 160px;
+      box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+      border-radius: 0 12px 12px;
+      z-index: 1;
+      overflow: hidden;
+    }
+    .dropdown-content button {
+      float: none;
       color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      text-align: left;
+      background: none;
     }
-
-    .btn:hover {
+    /* Add a grey background color to dropdown links on hover */
+    .dropdown-content button:hover {
+      background-color: rgba(0, 0, 0, 0.08);
+    }
+    .dropdown-content button.activebt {
+      background-color: rgba(0, 0, 0, 0.08);
       color: #2EC4B6;
+      font-weight: bold;
     }
+    /* Show the dropdown menu on hover */
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+    /* BTN OPTION 
+        .btn {
+          background: none;
+          font-size: 25px;
+          float: left;
+          border: none;
+          outline: none;
+          cursor: pointer;
+          padding: 14px 16px;
+          transition: 0.3s;
+          border-radius: 99px;
+          font-weight: bold;
+          color: black;
+        }
 
-    .btn.activebt {
-      color: #2EC4B6; 
-      background-color: rgba(255, 255, 255, 0.3);
-    }
-    .btn.btnhover:hover {
-      color: #2EC4B6; 
-      background-color: rgba(255, 255, 255, 0.3);
-    }
-/* BTN OPTION */
+        .btn:hover {
+          color: #2EC4B6;
+          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+        }
+
+        .btn.activebt {
+          color: #2EC4B6;
+          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+        }
+        .btn.btnhover:hover {
+          color: #2EC4B6;
+          box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+        }
+    BTN OPTION */
+/* DROPDOWN */
