--- a/the-base/style1ALL.css
+++ b/the-base/style1ALL.css
@@ -62,6 +62,12 @@
         iframe {
             margin-bottom: 10px;
         }
+
+        img.iconnn {
+            width: 20px;
+            height: 20px;
+            padding-right: 3px;
+        }
 /* END___FONT - TITLE__________________________________________________________________*/
 
 
@@ -89,10 +95,6 @@
             .tab-2 {
                 width: 70%;
             }
-            .bar-option-but {
-                position: fixed;
-                left: 3%;
-              }      
         }
 
 
@@ -119,9 +121,5 @@
                 height: 21px;
                 width: 21px;
             }
-            .bar-option-but {
-                position: fixed;
-                left: 5%; top: 92px;
-              }      
         }
 /* PHONE MODE */
