--- a/the-base/style1ALL.css
+++ b/the-base/style1ALL.css
@@ -121,6 +121,13 @@
                 height: 21px;
                 width: 21px;
             }
+            .dropdown .dropbtn {
+                font-size: 30px;
+            }
+            img.iconnn {
+                width: 35px;
+                height: 35px;
+            }
         }
 /* PHONE MODE */
 
